# advent-of-code2016

./: .travis.yml  LICENSE  README.md  advent-of-code2016.cabal  package.yaml
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs
test/: Day01Spec.hs  Day02Spec.hs  Day03Spec.hs  Day04Spec.hs  Day05Spec.hs  Day06Spec.hs  Day07Spec.hs  Day08Spec.hs  Day09Spec.hs
